--- a/.github/ISSUE_TEMPLATE/BugReport.yml
+++ b/.github/ISSUE_TEMPLATE/BugReport.yml
@@ -33,6 +33,12 @@ body:
         ## Bug 信息
 
         描述您遇到的 Bug。您可以附上截图、录屏、堆栈跟踪、日志等材料，便于开发者追踪问题。
+        
+        > [!WARNING]
+        > 若您要上传材料，请等待材料文件上传完成后再发布Issue
+        >
+        > 若显示为![Uploading 文件名]()即为上传中，请等待链接变动后再上传。
+        
   - type: textarea
     id: excepted
     attributes:
